# nrf52-ao

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  compile_commands.json  gcc-toolchain.sh  rust-toolchain.toml
.cargo/: config.toml
.zed/: debug.json  tasks.json
c/include/: hw_egu.h  hw_gpio.h  hw_rtc.h  hw_timer.h  interrupt_priorities.h  isr_mask.h  nrfx_config.h  nrfx_glue.h  rust_exports.h
c/ld/: nrf52840_app.ld
c/src/: hw_egu.c  hw_gpio.c  hw_rtc.c  hw_timer.c  isr_mask.c  main.c
cmake/: arm-none-eabi.cmake  cargo.cmake
src/: ffi.rs  lib.rs  panic.rs
src/ao/: ao.rs  evtqueue.rs  heartbeat.rs  mod.rs  objects.rs  timerao.rs
src/drivers/: led.rs  mod.rs  timer.rs
